@@ -43,6 +43,9 @@ bssm 1.1.6 (Release date: )
      ar1_lg model when predicting past or when using simulation smoother.
    * Fixed a bug which caused an error when predicting past values in 
      multivariate time series case.
+   * Fixed sampling of negative binomial distribution in predict method, which 
+     used std::negative_binomial which converts non-integer phi to integer. 
+     Sampling now uses Gamma-Poisson mixture for simulation.
    
 bssm 1.1.4 (Release date: 2021-04-13)
 ==============
